hphp/hack/test/typecheck/inout/bad_inout_use_magic_callstatic.php
<?hh // partial

final class C {
  public static function __callStatic(string $name, $args): void {}
}

function test(): void {
  $v = 123;
  C::f('test', inout $v);
}
